GVN-349: UI layout bug due to large vote amount (#32)
* GVN-349: UI layout bug due to large number of votes, font size is now changed and when the number is more than 30 characters, the number on newlines is adjusted.

* GVN-349: UI layout bug due to large number of votes, font size is now changed and when the number is more than 30 characters, the number on newlines is adjusted.

--- a/app/src/components/YourInfo.less
+++ b/app/src/components/YourInfo.less
@@ -31,7 +31,35 @@
   padding-top: 23px;
   line-height: 35px;
   font-size: 68px;
+  max-width: 216px;
+  overflow: hidden;
 }
+
+.resize-font-size-more-than-7-char {
+  font-size: clamp(1rem, -0.875rem + 8.333vw, 2.8rem);
+}
+
+.resize-font-size-more-than-9-char {
+  font-size: clamp(1rem, -0.875rem + 8.333vw, 2.2rem);
+}
+
+.resize-font-size-more-than-13-char {
+  font-size: clamp(1rem, -0.875rem + 8.333vw, 1.5rem);
+}
+
+.resize-font-size-more-than-16-char {
+  font-size: clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
+}
+
+.resize-font-size-more-than-22-char {
+  font-size: clamp(0.5rem, 0.5rem + 0.5vw, 0.79rem);
+}
+
+.resize-font-size-more-than-30-char {
+  font-size: clamp(0.5rem, 0.5rem + 0.5vw, 0.79rem);
+  overflow-wrap: break-word;
+}
+
 .action-btn-info {
   padding: 7px 20px;
   font-size: @sm-font-size;
